# NodeCodeDesktop

src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: db.rs
src-tauri/src/models/: node.rs
src-tauri/src/schemas/: calendar_node.sql
src/app/: page.tsx
src/components/: header.tsx  index.ts  sidebar.tsx
src/sections/: maineditor.tsx
