[package]
name = "nodecode"
version = "1.0.0"
description = "nodecode"
authors = ["mstomar"]
license = ""
repository = "nodecodeapp/NodeCodeDesktop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
kuzu = "0.6.1"
lazy_static = "1.5.0"
tauri-plugin-shell = "2.0.0"

